Fixing scrollbar position in auto-width mode

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -49,6 +49,7 @@ $sort-direction-color: royalblue;
   .rvt-table-container,
   .rvt-virtual-table-container {
     position: relative;
+    min-width: fit-content;
   }
 
   .rvt-virtual-table-container {
